--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">I do not own anything in this website.</p>
                 </div>
             </div>
         </div>
