--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">I do not own anything in this website</p>
                 </div>
             </div>
         </div>
